; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_opus_pvq.c_celt_alg_quant.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_opus_pvq.c_celt_alg_quant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32 (float*, i32*, i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, float*, i32, i32, i32, i32, float, %struct.TYPE_3__*)* @celt_alg_quant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @celt_alg_quant(i32* %0, float* %1, i32 %2, i32 %3, i32 %4, i32 %5, float %6, %struct.TYPE_3__* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca float*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca float, align 4
  %16 = alloca %struct.TYPE_3__*, align 8
  %17 = alloca i32*, align 8
  store i32* %0, i32** %9, align 8
  store float* %1, float** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store float %6, float* %15, align 4
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %16, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %17, align 8
  %21 = load float*, float** %10, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %14, align 4
  %24 = load i32, i32* %12, align 4
  %25 = load i32, i32* %13, align 4
  %26 = call i32 @celt_exp_rotation(float* %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 1)
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32 (float*, i32*, i32, i32)*, i32 (float*, i32*, i32, i32)** %28, align 8
  %30 = load float*, float** %10, align 8
  %31 = load i32*, i32** %17, align 8
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %11, align 4
  %34 = call i32 %29(float* %30, i32* %31, i32 %32, i32 %33)
  %35 = call float @sqrtf(i32 %34)
  %36 = load float, float* %15, align 4
  %37 = fdiv float %36, %35
  store float %37, float* %15, align 4
  %38 = load i32*, i32** %9, align 8
  %39 = load i32*, i32** %17, align 8
  %40 = load i32, i32* %11, align 4
  %41 = load i32, i32* %12, align 4
  %42 = call i32 @celt_encode_pulses(i32* %38, i32* %39, i32 %40, i32 %41)
  %43 = load i32*, i32** %17, align 8
  %44 = load float*, float** %10, align 8
  %45 = load i32, i32* %11, align 4
  %46 = load float, float* %15, align 4
  %47 = call i32 @celt_normalize_residual(i32* %43, float* %44, i32 %45, float %46)
  %48 = load float*, float** %10, align 8
  %49 = load i32, i32* %11, align 4
  %50 = load i32, i32* %14, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* %13, align 4
  %53 = call i32 @celt_exp_rotation(float* %48, i32 %49, i32 %50, i32 %51, i32 %52, i32 0)
  %54 = load i32*, i32** %17, align 8
  %55 = load i32, i32* %11, align 4
  %56 = load i32, i32* %14, align 4
  %57 = call i32 @celt_extract_collapse_mask(i32* %54, i32 %55, i32 %56)
  ret i32 %57
}

declare dso_local i32 @celt_exp_rotation(float*, i32, i32, i32, i32, i32) #1

declare dso_local float @sqrtf(i32) #1

declare dso_local i32 @celt_encode_pulses(i32*, i32*, i32, i32) #1

declare dso_local i32 @celt_normalize_residual(i32*, float*, i32, float) #1

declare dso_local i32 @celt_extract_collapse_mask(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
